# UMLBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  api_startup.sh  azurify.md  docker-compose.yml  gradio_app.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-and-push.yml  security-scan.yml  uml-api-AutoDeployTrigger-ee65c9a1-e0ca-4210-8d57-69c8167b7dbe.yml
.kilocode/rules/: coding_standard.md  restricted_files.md
Design_Drafter/: diagram_generator.py  sample_handler.py  uml_draft_handler.py
Design_Drafter/config/: config.py
Design_Drafter/services/: diagram_service.py
Design_Drafter/utils/: plantuml_extractor.py
Docker/: Dockerfile  Dockerfile.backend  startup.sh  supervisord.conf
UMLBot/: __init__.py  api_server.py  diagram_generator.py  er_draft_handler.py  exceptions.py  gantt_draft_handler.py  llm_interface.py  mindmap_draft_handler.py  prompt_manager.py  retry_policy.py  ui_mockup_draft_handler.py  uml_draft_handler.py
UMLBot/config/: __init__.py  (+1 more)
app/: __init__.py  fastapi_config.py  gradio_app.py  server.py  streamlit_app.py
assets/: c4_diagram.prompty  erd.prompty  gantt_chart.prompty  json.prompty  mindmap.prompty  ui_mockup.prompty
docs/: Design_Drafter_streamlit_app.md  UMLBot_streamlit_app.md  architecture.md  env_var_config_pattern.md  index.md  src_setup.sh
hooks/: post_gen_init.sh
tests/: test_api_layer.py  test_generic_error_handler.py  test_integration_chat_uml_error.py  test_llm_adapter.py  test_prompt_manager.py  test_responses_api_migration.py  test_retry_policy.py  test_streamlit_app.py  test_uml_draft_handler.py  test_v01_dependencies.py
(+120 files in other folders)
