[project]
name = "UMLBot"
version = "0.1.0"
description = "PoC"
requires-python = ">=3.11"
dependencies = [
    # Runtime ---------------------------------------------------------------
    "aiweb-common @ git+https://github.com/UABPeriopAI/llm_utils.git@develop",
    "fastapi>=0.118.3",
    "langchain-openai>=1.1.0",
    "openai>=2.20.0",
    "Pillow",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    # Dev / CI (--no-dev unreliable on Azure, so these stay here) -----------
    "autopep8",
    "black",
    "flake8",
    "isort",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-monorepo-plugin",
    "mkdocstrings[python]",
    "pytest",
    "pytest-asyncio",
]

# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
'''
[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
list_fixes= true
exclude=["autopep8"]
aggressive = 2

# iSort
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.uv.sources]
aiweb-common = { git = "https://github.com/UABPeriopAI/llm_utils.git", branch = "develop" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
